--- a/styles/pagesStyle/contactUs.css
+++ b/styles/pagesStyle/contactUs.css
@@ -22,7 +22,7 @@
   font-weight: 500;
   font-size: 18px;
   color: #fefefe;
-  background-color: #173fffba;
+  background-color: #ffabb8;
   font-family: "poppins";
   border: none;
 }
