--- a/styles/pagesStyle/home/home.css
+++ b/styles/pagesStyle/home/home.css
@@ -23,7 +23,7 @@ main{
 }
 
 .fifthButton{
-background-color:#173fffba;
+background-color:#ffabb8;
 color: white; 
 font-weight: 500;
 font-size: 16px;
