--- a/styles/pagesStyle/Blog/sideBar.css
+++ b/styles/pagesStyle/Blog/sideBar.css
@@ -20,7 +20,7 @@
 
 .serrch {
   font-size: 28px;
-  background-color: #173fffba;
+  background-color: #ffabb8;
   color: white;
   cursor: pointer;
 }
@@ -38,7 +38,7 @@
 }
 
 .postLinkss:hover {
-  background-color: #173fffba;
+  background-color: #ffabb8;
   color: white;
 }
 .sideBarArrow {
@@ -49,7 +49,7 @@
 }
 
 .dateColGreen {
-  color: #173fffba;
+  color: #ffabb8;
   font-size: 16px;
 }
 .strawbSideFont {
@@ -66,7 +66,7 @@
 }
 
 .popularTags:hover {
-  border-color: #173fffba;
+  border-color: #ffabb8;
 }
 
 hr {
