--- a/styles/pagesStyle/nav.module.css
+++ b/styles/pagesStyle/nav.module.css
@@ -11,7 +11,7 @@
   content: "";
   width: 100%;
   height: 2px;
-  background-color: #173fffba;
+  background-color: #ffabb8;
   position: absolute;
   bottom: -2px;
   left: 0;
