--- a/styles/pagesStyle/product/heroSectionP.css
+++ b/styles/pagesStyle/product/heroSectionP.css
@@ -1,4 +1,3 @@
-
 .productContain {
   background-color: gray;
 }
@@ -16,7 +15,7 @@
 
 .productHeaderBTN {
   font-size: 20px;
-  background-color: #173fffba;
+  background-color: #ffabb8;
   width: fit-content;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.3);
   cursor: pointer;
