--- a/styles/pagesStyle/product/thirdSectionP.css
+++ b/styles/pagesStyle/product/thirdSectionP.css
@@ -1,4 +1,3 @@
-
 .bar{
     background-color:#E2F6DE;
     position: relative;
@@ -8,7 +7,7 @@
     position: absolute;
     width: 100%;
     height: 5px;
-    background-color: #173fffba;
+    background-color: #ffabb8;
     bottom: 0;
 }
 
