--- a/styles/pagesStyle/profile/profile.css
+++ b/styles/pagesStyle/profile/profile.css
@@ -1,4 +1,3 @@
-
 .profileName {
   font-size: 28px;
   color: black;
@@ -11,7 +10,7 @@
 
 .editProfile {
   font-size: 20px;
-  background-color: #173fffba;
+  background-color: #ffabb8;
   cursor: pointer;
 }
 
@@ -21,5 +20,5 @@
 }
 .profileData {
   background-color: #f9f9f9;
-  outline-color: #173fffba;
+  outline-color: #ffabb8;
 }
