--- a/styles/pagesStyle/switcher.css
+++ b/styles/pagesStyle/switcher.css
@@ -23,7 +23,7 @@
 }
 .lang-dropdown:hover,
 .profileBTN:hover {
-  background-color: #173fffba;
+  background-color: #ffabb8;
   color: white !important;
   border: 1px solid grey;
 }
@@ -37,7 +37,7 @@
   font-weight: bold;
   cursor: pointer;
   text-align: center;
-  background-color: #173fffba;
+  background-color: #ffabb8;
   color: white !important;
 }
 
