--- a/styles/pagesStyle/loading.css
+++ b/styles/pagesStyle/loading.css
@@ -11,7 +11,7 @@
     width: 1em;
     text-align: left;
     color: #ffabb8 !important;
-    font-size: 20px !important;
+    font-size: 40px !important;
     font-weight: 600 !important;
     animation: dots 1.2s steps(4, end) infinite;
   }
@@ -93,7 +93,7 @@
     position: absolute;
     width: 40px;
     height: 40px;
-    border: 4px solid #0070f3;
+    border: 4px solid #ffabb8;
     border-top-color: transparent; 
     border-radius: 50%;
   
